--- a/views/yodoo_module_serie.xml
+++ b/views/yodoo_module_serie.xml
@@ -28,6 +28,7 @@
                 <field name="module_id"/>
                 <field name="serie_id"/>
                 <field name="last_version_id"/>
+                <field name="license_id"/>
                 <field name="version_count"/>
             </tree>
         </field>
@@ -51,6 +52,7 @@
                     <group>
                         <group>
                             <field name="module_id"/>
+                            <field name="license_id"/>
                         </group>
                         <group>
                             <field name="serie_id"/>
