--- a/views/yodoo_module_version.xml
+++ b/views/yodoo_module_version.xml
@@ -23,6 +23,10 @@
                             string="License"
                             domain="[]"
                             context="{'group_by':'license_id'}"/>
+                    <filter name="group_by_category"
+                            string="Category"
+                            domain="[]"
+                            context="{'group_by':'category_id'}"/>
                 </group>
             </search>
         </field>
@@ -38,7 +42,7 @@
                 <field name="version"/>
                 <field name="author"/>
                 <field name="license_id"/>
-                <field name="category"/>
+                <field name="category_id"/>
                 <field name="application"/>
                 <field name="version_non_standard"/>
             </tree>
@@ -69,7 +73,7 @@
                         <group>
                             <field name="author"/>
                             <field name="license_id"/>
-                            <field name="category"/>
+                            <field name="category_id"/>
                         </group>
                         <group>
                             <field name="application"/>
