--- a/views/yodoo_module_version.xml
+++ b/views/yodoo_module_version.xml
@@ -36,6 +36,7 @@
         <field name="model">yodoo.module.version</field>
         <field name="arch" type="xml">
             <tree create="false" edit="false" delete="false">
+                <field name="currency_id" invisible="1"/>
                 <field name="system_name"/>
                 <field name="name"/>
                 <field name="serie_id"/>
@@ -44,7 +45,7 @@
                 <field name="license_id"/>
                 <field name="category_id"/>
                 <field name="application"/>
-                <field name="version_non_standard"/>
+                <field name="price" widget='monetary' options="{'currency_field': 'currency_id'}"/>
             </tree>
         </field>
     </record>
@@ -79,6 +80,10 @@
                             <field name="application"/>
                             <field name="installable"/>
                             <field name="auto_install"/>
+                        </group>
+                        <group name="group_price">
+                            <field name="price" widget='monetary' options="{'currency_field': 'currency_id'}"/>
+                            <field name="currency_id" invisible="1"/>
                         </group>
                     </group>
                     <group>
