--- a/views/menu.xml
+++ b/views/menu.xml
@@ -14,6 +14,7 @@
 
     <menuitem name="Settings"
               id="menu_root_settings"
-              parent="menu_root" sequence="40"/>
+              parent="menu_root"
+              sequence="140"/>
 
 </odoo>
