--- a/views/yodoo_module.xml
+++ b/views/yodoo_module.xml
@@ -92,29 +92,44 @@
                     <group>
                         <group>
                             <field name="system_name"/>
-                            <field name="serie_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                            <field name="serie_ids" widget="many2many_tags" options="{'color_field': 'color', 'open': True}"/>
                             <field name="version"/>
                         </group>
                         <group>
-                            <field name="author_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                            <field name="website"/>
+                            <field name="author_ids" widget="many2many_tags" options="{'color_field': 'color', 'open': True}"/>
                             <field name="license_id"/>
                             <field name="category_id"/>
-                            <field name="dependency_ids" widget="many2many_tags"/>
-                        </group>
-                        <group>
-                            <field name="application"/>
-                            <field name="installable"/>
-                            <field name="auto_install"/>
-                        </group>
-                        <group name="group_price">
-                            <field name="currency_id" invisible="1"/>
-                            <field name="price" widget='monetary' options="{'currency_field': 'currency_id'}"/>
                         </group>
                     </group>
-                    <group>
-                        <field name="summary"/>
-                        <field name="website"/>
-                    </group>
+                    <notebook>
+                        <page name="page_info" string="Info">
+                            <group>
+                                <group>
+                                    <field name="application"/>
+                                    <field name="installable"/>
+                                    <field name="auto_install"/>
+                                </group>
+                                <group name="group_price">
+                                    <field name="currency_id" invisible="1"/>
+                                    <field name="price" widget='monetary' options="{'currency_field': 'currency_id'}"/>
+                                </group>
+                            </group>
+                            <group>
+                                <field name="summary"/>
+                            </group>
+                        </page>
+                        <page name="page_dependencies" string="Dependencies">
+                            <group>
+                                <group name="group_direct_deps" string="Direct Dependencies">
+                                    <field name="dependency_ids" nolabel="1" widget="many2many_tags" options="{'open': True}"/>
+                                </group>
+                                <group name="group_recursive_deps" string="Recursive Dependencies">
+                                    <field name="dependency_all_ids" nolabel="1" widget="many2many_tags" options="{'open': True}"/>
+                                </group>
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers"/>
