Allow to edit colors of author and serie

--- a/views/yodoo_module_author.xml
+++ b/views/yodoo_module_author.xml
@@ -22,7 +22,7 @@
     <record model="ir.ui.view" id="yodoo_module_author_form">
         <field name="model">yodoo.module.author</field>
         <field name="arch" type="xml">
-            <form create="false" edit="false" delete="false">
+            <form create="false" edit="true" delete="false">
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button class="oe_stat_button"
@@ -37,6 +37,11 @@
                     <div class="oe_title">
                         <h1><field name="name" placeholder="Name..."/></h1>
                     </div>
+                    <group>
+                        <group>
+                            <field name="color"/>
+                        </group>
+                    </group>
                 </sheet>
             </form>
         </field>
