--- a/views/yodoo_module.xml
+++ b/views/yodoo_module.xml
@@ -21,6 +21,14 @@
                 <filter name="filter_application" string="Apps" domain="[('application', '=', True)]"/>
                 <separator/>
 
+                <filter name="filter_published_on_odoo_apps"
+                        string="Published on Odoo Apps"
+                        domain="[('odoo_apps_link', '!=', False)]"/>
+                <filter name="filter_unpublished_on_odoo_apps"
+                        string="Unpublished on Odoo Apps"
+                        domain="[('odoo_apps_link', '=', False)]"/>
+                <separator/>
+
                 <group expand="0" string="Group By">
                     <filter name="group_by_license"
                             string="License"
@@ -30,6 +38,10 @@
                             string="Category"
                             domain="[]"
                             context="{'group_by':'category_id'}"/>
+                    <filter name="group_by_resource_visibility"
+                            string="Visibility"
+                            domain="[]"
+                            context="{'group_by':'resource_visibility'}"/>
                 </group>
             </search>
         </field>
@@ -48,6 +60,7 @@
                 <field name="license_id"/>
                 <field name="category_id"/>
                 <field name="application"/>
+                <field name="resource_visibility"/>
                 <field name="version_count"/>
                 <field name="price" widget='monetary' options="{'currency_field': 'currency_id'}"/>
                 <field name="tag_ids"
@@ -94,9 +107,20 @@
                             <field name="system_name"/>
                             <field name="serie_ids" widget="many2many_tags" options="{'color_field': 'color', 'open': True}"/>
                             <field name="version"/>
+                            <field name="resource_visibility"/>
+                            <field name="resource_id" groups="base.group_no_one"/>
                         </group>
                         <group>
                             <field name="website"/>
+                            <label for="odoo_apps_link"/>
+                            <div class="o_row" style="min-width: 100%">
+                                <field name="odoo_apps_link" style="min-width: calc(100% - 40px);" widget="url"/>
+                                <button name="check_odoo_apps_published_state"
+                                        type="object"
+                                        class="btn-link btn-sm"
+                                        groups="yodoo_apps_database.group_yodoo_apps_manager"
+                                        icon="fa-refresh"/>
+                            </div>
                             <field name="author_ids" widget="many2many_tags" options="{'color_field': 'color', 'open': True}"/>
                             <field name="license_id"/>
                             <field name="category_id"/>
