--- a/views/yodoo_module.xml
+++ b/views/yodoo_module.xml
@@ -82,6 +82,8 @@
                                 name="action_show_module_series">
                             <field name="serie_count"
                                    string="Series"
+                                   aria-label="Series"
+                                   title="Series"
                                    widget="statinfo"/>
                         </button>
                         <button class="oe_stat_button"
@@ -90,6 +92,8 @@
                                 name="action_show_versions">
                             <field name="version_count"
                                    string="Versions"
+                                   aria-label="Versions"
+                                   title="Versions"
                                    widget="statinfo"/>
                         </button>
                     </div>
@@ -119,6 +123,8 @@
                                         type="object"
                                         class="btn-link btn-sm"
                                         groups="yodoo_apps_database.group_yodoo_apps_manager"
+                                        aria-label="Check publication state"
+                                        title="Check publication state"
                                         icon="fa-refresh"/>
                             </div>
                             <field name="author_ids" widget="many2many_tags" options="{'color_field': 'color', 'open': True}"/>
